# Ipopt

./: CMakeLists.txt  README
Ipopt/: CMakeLists.txt
Ipopt/src/Algorithm/: IpAlgBuilder.cpp
Ipopt/src/Algorithm/LinearSolvers/: IpEigenSimplicialSolverInterface.cpp  IpEigenSimplicialSolverInterface.hpp  IpLinearSolversRegOp.cpp
Ipopt/src/Common/: config.h.cmake.in  config_ipopt.h.cmake.in
Ipopt/src/Interfaces/: IpTNLPAdapter.cpp
